--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "bugs": {
     "url": "https://github.com/01AutoMonkey/nouwiki_default_template/issues"
   },
-  "devDependencies": {},
-  "dependencies": {
+  "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "codemirror": "^5.9.0",
@@ -40,5 +39,8 @@
     "style-loader": "^0.13.0",
     "toml": "^2.3.0",
     "webpack": "^1.12.9"
+  },
+  "dependencies": {
+
   }
 }
